<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical" 
    tools:context=".FromActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
	android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/ui_from_activity_header"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:text="@string/ui_from_activity_header_text"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>
    
    <Spinner
		android:id="@+id/address_spinner"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <EditText
    android:id="@+id/ui_from_activity_enterName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/ui_from_activity_enterName_hint"
    android:inputType="textCapWords" />

    <EditText
        android:id="@+id/ui_from_activity_enterAddress1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ui_from_activity_enterAddress1_hint"
        android:inputType="textCapWords" >

    </EditText>

    <EditText
        android:id="@+id/ui_from_activity_enterAddress2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ui_from_activity_enterAddress2_hint"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/ui_from_activity_enterCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ui_from_activity_enterCity_hint"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/ui_from_activity_enterState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="2"
        android:hint="@string/ui_from_activity_enterState_hint"
        android:inputType="textCapCharacters" />

    <EditText
        android:id="@+id/ui_from_activity_enterZip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="5"
        android:hint="@string/ui_from_activity_enterZip_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/ui_from_activity_addressLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ui_from_activity_addressLabel_hint"
        android:inputType="text" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/ui_from_activity_nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_from_activity_nextButton_text" />

            <Button
                android:id="@+id/ui_from_activity_saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_from_activity_saveButton_text" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
</ScrollView>