<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photo_check" 
		android:gravity="center"
		android:layout_margin="5dp"
		android:layout_weight="0.1"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    
    <ImageView 
	    android:id="@+id/imageView"
		android:minHeight="175dp"
        android:minWidth="175dp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_margin="5dp"
		android:layout_weight="0.65"
	    android:contentDescription="@string/selected_photo" />
    
	<LinearLayout
		android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:id="@+id/LinearLayout" 
        android:layout_weight="0.25" >
        
        
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="3dp"
            android:layout_gravity="bottom"
            android:onClick="onOkayClicked"
            android:text="@string/photo_okay" >
        </Button>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
			android:layout_marginBottom="10dp"
            android:layout_gravity="bottom"
            android:onClick="onNotOkayClicked"
            android:text="@string/photo_not_okay" >
        </Button>
    </LinearLayout>
    

</LinearLayout>
