<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PayActivity" 
    android:orientation="vertical">

    <TextView
        android:id="@+id/ui_pay_activity_recipient_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_pay_activity_recipient_header_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <ListView
        android:id="@+id/ui_pay_activity_recipients_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:listSelector="@android:color/transparent"
        android:divider="@null"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        	<EditText
		        android:id="@+id/ui_pay_activity_recipient_email"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:inputType="textEmailAddress" 
		        android:hint="@string/ui_pay_activity_recipient_email_hint">
		    </EditText>
		
		    <EditText
		        android:id="@+id/ui_pay_activity_recipient_card"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:inputType="textPassword" 
		        android:hint="@string/ui_pay_activity_recipient_card_hint"/>
		
		    <EditText
		        android:id="@+id/ui_pay_activity_recipient_expiry"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10" 
		        android:hint="@string/ui_pay_activity_recipient_expiry_hint"/>
		
		    <EditText
		        android:id="@+id/ui_pay_activity_recipient_cvc"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:inputType="number" 
		        android:hint="@string/ui_pay_activity_recipient_cvc_hint"/>
		        
    </LinearLayout>

    <Button
        android:id="@+id/ui_pay_activity_paybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
