<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RecipientActivity"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" 
	        android:id="@+id/ui_recipient_activity_linearlayout" >
	    </LinearLayout>
	    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >
			<Button
				android:id="@+id/ui_recipient_activity_addanother_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/ui_recipient_activity_addanother_button_text"
	            style="?android:attr/buttonStyleSmall" />
	
				<TextView
				    android:id="@+id/ui_recipient_activity_addanother"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/ui_recipient_activity_addanother_text" />
	   	</LinearLayout>
	
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	
	           	<Button
	            android:id="@+id/ui_recipient_activity_nextButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"
	            android:layout_centerHorizontal="true"
	            android:text="@string/ui_from_activity_nextButton_text" />
	            
	    </RelativeLayout>

	</LinearLayout>
</ScrollView>
